Fix issue where 'justify-content: space between' was not working for the <main> flex container; style header; add other spacing/sizing details

--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,23 @@ body {
   font-family: 'Arima Madurai', cursive;
 }
 
+header {
+  background-color: #1b1b1b;
+  padding: 1em;
+}
+
+h1 {
+  margin: 0;
+  text-align: center;
+  color: #B5B816;
+  text-shadow: -3px -2px 4px #1629B8;
+}
+
 .wrapper {
-  min-width: 800px;
-  max-width: 1000px;
-  height: 100%;
-  margin: 0 auto;
+  min-width: 600px;
+  max-width: 800px;
+  min-height: 80vh;
+  margin: 5vh auto;
   display: flex;
   justify-content: space-between;
   border: 1px solid black;
@@ -23,20 +35,23 @@ body {
 
 #sidebar {
   min-width: 150px;
-  height: 100%;
+  height: 50%;
   border: 1px solid yellow;
 }
 
 main {
   min-width: 600px;
-  align-self: center;
+  /* align-self: center; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .player-name {
   text-align: center;
 }
 
-div {
+.card {
   height: 140px;
   width: calc(140px * 5 / 7);
 }
@@ -46,11 +61,19 @@ img {
   height: 100%;
 }
 
+#pickup-and-discard {
+}
+
 #player1-side,
 #player2-side {
   width: 100%;
-  height: 40%;
+  height: 33.33%;
   border: 1px solid slateblue;
+}
+
+.player-name {
+  margin-top: .6em;
+  margin-bottom: .6em;
 }
 
 #player1-cards,
@@ -59,10 +82,5 @@ img {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-width: 600px;
-  border: 1px solid red;
-}
-
-#player1-cards {
-  /* padding-top: 10vh; */
+  /* border: 1px solid red; */
 }
